<resources>
    <string name="apiKey"> df9ecb000afccd5bf648b66458a17d67 </string>
    <string name="unit"> imperial </string>

    <string name="degreeSym">°</string>
    <string name="appName"> My Weather Application</string>
    <string name="cityState">St.Paul,MN</string>
    <string name="degree">72°</string>
    <string name="lowTemp">Low Temp: </string>
    <string name="highTemp">High Temp: </string>
    <string name="humidity">Humidity: </string>
    <string name="pressure">Pressure </string>
    <string name="pressureUnit">hpa </string>
    <string name="humidityUnit">% </string>
    <string name="feel">Feels like: </string>
    <string name="foreCastFor"> 16 Day Forecast  </string>
    <string name="Weather"> Weather </string>
    <string name="zipError"> Zip Code must be a five digit number </string>
    <string name="search" > Search</string>
    <string name="goFor"> go to forecast</string>
    <string name="goWeath"> Go to Weather</string>
    <string name="home"> Home </string>
    <string name="channel_name">jchannel</string>
    <string name="channel_description"> channelDescription</string>

    <string name="Thunderstrom"> Thunderstrom</string>
    <string name="Rain"> Rain </string>
    <string name="Snow"> Snow </string>
    <string name="Sunny"> Sunny </string>
    <string name="Clouds"> Clouds</string>

    <string name="notAllowed">Permission was denied!</string>


</resources>
