<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- app name -->
    <TextView
        android:paddingLeft="10dp"
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:background="@color/teal_200"
        android:text="@string/appName"
        android:textSize="25sp">

    </TextView>

<!-- city state -->
    <TextView
        android:text="@string/cityState"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp">

    </TextView>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- Degree -->
    <TextView
        android:text="@string/degree"
        android:layout_width="140sp"
        android:layout_height="100sp"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:textSize="72sp">
    </TextView>

    <!--Image-->
    <ImageView
        android:layout_width="90dp"
        android:layout_height="100sp"
        android:src="@drawable/sun">
    </ImageView>
</LinearLayout>

<!-- Feel -->
    <TextView
        android:text="@string/feel"
        android:paddingBottom="30dp"
        android:layout_width="200dp"
        android:layout_marginLeft="25dp"
        android:layout_height="55sp"
        android:gravity="center_vertical"
        android:textSize="15sp">

    </TextView>


<!-- Low Temp -->
    <TextView
        android:text="@string/lowTemp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="25sp">
    </TextView>

    <!-- High Temp-->
    <TextView
        android:text="@string/highTemp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="25sp">
    </TextView>

    <!-- humidity-->
    <TextView
        android:text="@string/humidity"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="25sp">
    </TextView>

    <!-- pressure-->
    <TextView
        android:text="@string/pressure"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="25sp">
    </TextView>





</LinearLayout>
